# hydro

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  build_docs.bash  cleanup-perf.bash  cleanup-tracing.bash  precheck.bash  rust-toolchain.toml
dfir_datalog_core/: CHANGELOG.md  Cargo.toml
dfir_datalog_core/src/: grammar.rs  join_plan.rs  lib.rs
dfir_datalog_core/src/snapshots/: dfir_datalog_core__tests__aggregations_and_comments@datalog_program.snap  dfir_datalog_core__tests__aggregations_fold_keyed_expr@datalog_program.snap  dfir_datalog_core__tests__anti_join@datalog_program.snap  dfir_datalog_core__tests__collect_vec@datalog_program.snap  dfir_datalog_core__tests__detuple@datalog_program.snap  dfir_datalog_core__tests__detuple_then_flat@datalog_program.snap  dfir_datalog_core__tests__expr_lhs@datalog_program.snap  dfir_datalog_core__tests__expr_predicate@datalog_program.snap  dfir_datalog_core__tests__flat_then_detuple@datalog_program.snap  dfir_datalog_core__tests__flatten@datalog_program.snap  dfir_datalog_core__tests__index@datalog_program.snap  dfir_datalog_core__tests__join_with_other@datalog_program.snap  dfir_datalog_core__tests__join_with_self@datalog_program.snap  dfir_datalog_core__tests__local_constraints@datalog_program-2.snap  dfir_datalog_core__tests__local_constraints@datalog_program.snap  dfir_datalog_core__tests__max@datalog_program.snap  dfir_datalog_core__tests__max_all@datalog_program.snap  dfir_datalog_core__tests__minimal_program@datalog_program.snap  dfir_datalog_core__tests__multi_detuple@datalog_program.snap  dfir_datalog_core__tests__multiple_contributors@datalog_program.snap  dfir_datalog_core__tests__non_copy_but_clone@datalog_program.snap  dfir_datalog_core__tests__persist@datalog_program.snap  dfir_datalog_core__tests__persist_uniqueness@datalog_program.snap  dfir_datalog_core__tests__send_to_node@datalog_program.snap  dfir_datalog_core__tests__simple_filter@datalog_program.snap  dfir_datalog_core__tests__single_column_program@datalog_program.snap  dfir_datalog_core__tests__transitive_closure@datalog_program.snap  dfir_datalog_core__tests__triple_relation_join@datalog_program.snap  dfir_datalog_core__tests__wildcard_fields@datalog_program.snap  dfir_datalog_core__tests__wildcard_join_count@datalog_program.snap
dfir_macro/: CHANGELOG.md  Cargo.toml  build.rs
dfir_macro/src/: lib.rs
example_test/: Cargo.toml
example_test/src/: lib.rs
hydro_deploy/hydro_cli/: CHANGELOG.md  Cargo.toml  pyproject.toml
hydro_deploy/hydro_cli/hydro/: .gitignore
hydro_deploy/hydro_cli/python_tests/: test_basic.py  test_tagged.py
hydro_deploy/hydro_cli/src/: cli.rs  lib.rs
hydro_deploy/hydro_cli_examples/: Cargo.toml
hydro_deploy/hydro_deploy_integration/: CHANGELOG.md  Cargo.toml
hydro_deploy/hydro_deploy_integration/src/: lib.rs
hydro_lang/: CHANGELOG.md  Cargo.toml  build.rs
hydro_lang/examples/: graph_rendering.rs
hydro_lang/src/: boundedness.rs  cycle.rs  deploy_runtime.rs  graph_debug.rs  graph_render.rs  graphviz.rs  ir.rs  lib.rs  mermaid.rs  optional.rs  reactflow.rs  runtime_context.rs  singleton.rs  staging_util.rs  stream.rs  test_util.rs
hydro_lang/src/builder/: built.rs  compiled.rs  deploy.rs  mod.rs
hydro_lang/src/deploy/: deploy_graph.rs  in_memory_graph.rs  macro_runtime.rs  mod.rs  trybuild.rs  trybuild_rewriters.rs
hydro_lang/src/graph/: debug.rs  graphviz.rs  mermaid.rs  mod.rs  reactflow.rs  render.rs  render_new.rs  template.html  template.rs
hydro_lang/src/location/: can_send.rs  external_process.rs  mod.rs  process.rs  tick.rs
hydro_lang/src/rewrites/: analyze_counter.rs  analyze_perf.rs  analyze_perf_and_counters.rs  decoupler.rs  insert_counter.rs  mod.rs  partitioner.rs  persist_pullup.rs  print_id.rs  profiler.rs  properties.rs
hydro_lang/src/runtime_support/: resource_measurement.rs
hydro_lang/tests/compile-fail/: send_bincode_lifetime.rs  send_bincode_lifetime.stderr
hydro_optimize/: Cargo.toml
hydro_optimize/src/: debug.rs  decouple_analysis.rs  decoupler.rs  deploy.rs  deploy_and_analyze.rs  lib.rs  parse_results.rs  partitioner.rs  repair.rs  rewrites.rs
hydro_optimize/src/snapshots/: hydro_optimize__decoupler__tests__decouple_after_source.snap  hydro_optimize__decoupler__tests__move_source_decouple_map.snap
hydro_std/: CHANGELOG.md  Cargo.toml
hydro_std/src/: bench_client.rs  compartmentalize.rs  lib.rs  quorum.rs  request_response.rs
hydro_std/src/bench_client/: mod.rs  rolling_average.rs
hydro_test/: Cargo.toml
hydro_test/examples/: benchmark_paxos.rs  chat.rs  compartmentalized_paxos.rs  compute_pi.rs  decouple_compute_pi.rs  echo_server.rs  first_ten_distributed.rs  map_reduce.rs  partition_simple_cluster.rs  paxos.rs  perf_compute_pi.rs  perf_paxos.rs  two_pc.rs
hydro_test/src/: lib.rs
hydro_test/src/cluster/: bench_client.rs  chat.rs  compartmentalized_paxos.rs  compute_pi.rs  echo_server.rs  kv_replica.rs  map_reduce.rs  mod.rs  paxos.rs  paxos_bench.rs  paxos_kv.rs  paxos_with_client.rs  simple_cluster.rs  two_pc.rs  two_pc_bench.rs
hydro_test/src/local/: chat_app.rs  count_elems.rs  futures.rs  graph_reachability.rs  mod.rs  negation.rs
hydro_test_local/: Cargo.toml
hydro_test_local/src/local/: chat_app.rs  compute_pi.rs  count_elems.rs  first_ten.rs  futures.rs  (+3 more)
hydro_test_local_macro/: Cargo.toml
include_mdtests/: CHANGELOG.md  Cargo.toml  README.md
include_mdtests/src/: lib.rs
lattices/: CHANGELOG.md  Cargo.toml
lattices/src/: algebra.rs  collections.rs  conflict.rs  dom_pair.rs  map_union_with_tombstones.rs  vec_union.rs  with_bot.rs  with_top.rs
lattices_macro/: CHANGELOG.md  Cargo.toml
lattices_macro/src/: lib.rs
pusherator/: CHANGELOG.md  Cargo.toml
pusherator/src/: lib.rs
stageleft_test_macro/: Cargo.toml
stageleft_tool/: CHANGELOG.md  Cargo.toml
stageleft_tool/src/: lib.rs
template/dfir/: Cargo.toml  README.md  rust-toolchain.toml
template/hydro/: Cargo.toml  rust-toolchain.toml
variadics/: CHANGELOG.md  Cargo.toml
variadics/examples/: debug_fields.rs
variadics/src/: lib.rs  variadic_collections.rs
(+759 files in other folders)
