[workspace]

# See "Adding new crates" and "Moving crates" addendum sections in `RELEASING.md`
members = [
    "benches",
    "datastores/gossip_kv",
    "hydro_deploy/core",
    "hydro_deploy/hydro_cli",
    "hydro_deploy/hydro_cli_examples",
    "hydro_deploy/hydroflow_deploy_integration",
    "dfir_rs",
    "dfir_datalog",
    "dfir_datalog_core",
    "dfir_lang",
    "dfir_macro",
    "hydro_lang",
    "hydro_std",
    "hydro_test",
    "hydro_test_local",
    "hydro_test_local_macro",
    "lattices",
    "lattices_macro",
    "multiplatform_test",
    "pusherator",
    "relalg",
    "stageleft",
    "stageleft_macro",
    "stageleft_test",
    "stageleft_test_macro",
    "stageleft_tool",
    "topolotree",
    "variadics",
    "variadics_macro",
    "website_playground",
]

resolver = "2"

[profile.release]
strip = true      # Strip symbols from the binary
# Previously this was "z" to minimize docker binary size while sacrificing performance. But "z"
# doesn't make things that much smaller, `strip` is far more important for binary size. Use "3" for
# performance.
opt-level = 3
lto = "fat"

[profile.profile]
inherits = "release"
debug = 2
lto = "off"
strip = "none"

[profile.dev.package.website_playground]
debug-assertions = false

[profile.release.package.website_playground]
opt-level = "s"

[workspace.lints.rust]
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "warn"

# Lints for upgrading to the 2024 edition
boxed_slice_into_iter = "warn"
dependency_on_unit_never_type_fallback = "warn"
deprecated_safe_2024 = "warn"
edition_2024_expr_fragment_specifier = "allow" # ALLOW
if_let_rescope = "allow" # ALLOW
impl_trait_overcaptures = "warn"
keyword_idents_2024 = "warn"
missing_unsafe_on_extern = "warn"
never_type_fallback_flowing_into_unsafe = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
static_mut_refs = "warn"
tail_expr_drop_order = "allow" # ALLOW
unsafe_attr_outside_unsafe = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_into_iter_loop = "warn"
let_and_return = "allow"
upper_case_acronyms = "warn"
