[workspace]

# See "Adding new crates" and "Moving crates" addendum sections in `RELEASING.md`
members = [
    "benches",
    "datastores/gossip_kv",
    "dfir_datalog_core",
    "dfir_datalog",
    "dfir_lang",
    "dfir_macro",
    "dfir_rs",
    "hydro_deploy/core",
    "hydro_deploy/hydro_cli_examples",
    "hydro_deploy/hydro_cli",
    "hydro_deploy/hydroflow_deploy_integration",
    "hydro_lang",
    "hydro_std",
    "hydro_test_local_macro",
    "hydro_test_local",
    "hydro_test",
    "include_mdtests",
    "lattices_macro",
    "lattices",
    "multiplatform_test",
    "pusherator",
    "relalg",
    "topolotree",
    "variadics_macro",
    "variadics",
    "website_playground",
]
exclude = ["template"]

resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hydro-project/hydro"

[profile.release]
strip = true      # Strip symbols from the binary
# Previously this was "z" to minimize docker binary size while sacrificing performance. But "z"
# doesn't make things that much smaller, `strip` is far more important for binary size. Use "3" for
# performance.
opt-level = 3
lto = "fat"

[profile.profile]
inherits = "release"
debug = 2
lto = "off"
strip = "none"

[profile.dev.package.website_playground]
debug-assertions = false

[profile.release.package.website_playground]
opt-level = "s"

[workspace.lints.rust]
impl_trait_overcaptures = "warn"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_into_iter_loop = "warn"
let_and_return = "allow"
upper_case_acronyms = "warn"
