[package]
name = "hydro_lang"
publish = true
version = "0.12.1"
documentation = "https://docs.rs/hydro_lang/"
description = "Choreographic programming  for Hydro, built on DFIR"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = []
stageleft_devel = []
deploy = [
    "build",
    "dep:hydro_deploy",
    "dep:trybuild-internals-api",
    "dep:toml",
    "dep:prettyplease",
    "dep:sha2",
    "dep:stageleft_tool",
    "dep:nameof",
]
build = ["dep:dfir_lang"]
runtime_measure = ["dep:chrono", "dep:procfs"]
staged_macro = ["dep:dfir_rs"]
runtime_support = ["dep:dfir_rs", "dfir_rs/deploy_integration"]
dfir_context = ["dep:dfir_rs"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1.1.0"
bincode = "1.3.1"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.12.1", optional = true }
hydro_deploy_integration = { path = "../hydro_deploy/hydro_deploy_integration", version = "^0.12.1" }
dfir_rs = { path = "../dfir_rs", version = "^0.12.1", default-features = false, optional = true }
dfir_lang = { path = "../dfir_lang", version = "^0.12.1", optional = true }
futures = "0.3.0"
match_box = "0.0.2"
nameof = { version = "1.0.0", optional = true }
prettyplease = { version = "0.2.0", features = ["verbatim"], optional = true }
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.74"
quote = "1.0.35"
regex = "1.11.1"
sealed = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = { version = "0.10.0", optional = true }
stageleft = "0.8.1"
stageleft_tool = { version = "0.8.1", optional = true }
syn = { version = "2.0.46", features = [
    "parsing",
    "extra-traits",
    "visit-mut",
] }
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.3", default-features = false, features = [
    "time",
] }
toml = { version = "0.8.0", optional = true }
trybuild-internals-api = { version = "1.0.99", optional = true }

# TODO(mingwei): remove once file locking is stable: https://github.com/rust-lang/rust/issues/130994
# build.rs `println!("cargo:rustc-cfg=nightly")` doesn't gate this (happens
# after dependency resolution), but this doesn't hurt to have.
[target.'cfg(not(nightly))'.dependencies]
fs2 = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
chrono = { version = "0.4.39", optional = true }
procfs = { version = "0.17.0", optional = true }

[build-dependencies]
stageleft_tool = "0.8.1"
rustc_version = "0.4.0"

[dev-dependencies]
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.12.1" }
ctor = "0.2"
insta = "1.39"
tokio-test = "0.4.4"
trybuild = "1"
