[package]
name = "hydro_std"
publish = true
version = "0.12.1"
documentation = "https://docs.rs/hydro_plus/"
description = "Standard library of distributed systems building blocks for Hydro"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.12.1" }
stageleft = "0.8.0"
hdrhistogram = "7.5.4"
stats-ci = "0.1.1"

[build-dependencies]
stageleft_tool = "0.8.0"

[dev-dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.12.1", features = [
    "deploy",
] }
insta = "1.39"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.12.1" }
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
ctor = "0.2"
