[package]
name = "hydro_std"
publish = true
version = "0.13.0"
documentation = "https://docs.rs/hydro_plus/"
description = "Standard library of distributed systems building blocks for Hydro"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.13.0" }
stageleft = "0.8.1"
serde = "1"
hdrhistogram = "7.5.4"
stats-ci = "0.1.1"

[build-dependencies]
stageleft_tool = "0.8.1"

[dev-dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.13.0", features = [
    "deploy",
] }
insta = "1.39"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.13.0" }
ctor = "0.2"
