[package]
name = "hydro_std"
publish = true
version = "0.13.0"
documentation = "https://docs.rs/hydro_plus/"
description = "Standard library of distributed systems building blocks for Hydro"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.13.0" }
stageleft.workspace = true
hdrhistogram = "7.5.4"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
stageleft_tool.workspace = true

[dev-dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.13.0", features = [
    "deploy",
] }
insta = "1.39"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.13.0" }
ctor = "0.2"
