[package]
name = "hydro_test"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
ilp = ["hydro_optimize/ilp"]

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.13.2" }
hydro_std = { path = "../hydro_std", version = "^0.13.0" }
hydro_optimize = { path = "../hydro_optimize", version = "^0.13.0" }
stageleft.workspace = true
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"

[build-dependencies]
stageleft_tool.workspace = true

[dev-dependencies]
ctor = "0.2"
dfir_lang = { path = "../dfir_lang", version = "^0.13.0" }
example_test = { path = "../example_test", version = "^0.0.0" }
futures = "0.3.0"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.13.0" }
hydro_lang = { path = "../hydro_lang", version = "^0.13.2", features = [
    "deploy",
] }
include_mdtests = { path = "../include_mdtests", version = "^0.0.0" }
insta = "1.39"
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-test = "0.4.4"
dfir_rs = { path = "../dfir_rs", version = "^0.13.0", default-features = false }