[package]
name = "hydro_test_local"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
stageleft_devel = []

[dependencies]
dfir_rs = { path = "../dfir_rs", version = "^0.12.0", default-features = false }
hydro_lang = { path = "../hydro_lang", version = "^0.12.0", features = [
    "build",
] }
stageleft = "0.7.0"
rand = "0.8.0"

hydro_test_local_macro = { path = "../hydro_test_local_macro" }

[build-dependencies]
stageleft_tool = "0.6.0"

[dev-dependencies]
dfir_rs = { path = "../dfir_rs", version = "^0.12.0", default-features = false, features = [
    "meta",
] }
insta = "1.39"
futures = "0.3.0"
