[package]
name = "hydro_test_local"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
stageleft_devel = []

[dependencies]
dfir_rs = { path = "../dfir_rs", version = "^0.13.0", default-features = false }
hydro_lang = { path = "../hydro_lang", version = "^0.13.1", features = [
    "build",
    "staged_macro",
    "runtime_support",
] }
stageleft = "0.8.1"
rand = "0.8.0"
tokio = "1.43.0"
tokio-stream = { version = "0.1.3", default-features = false }
futures = "0.3.0"

hydro_test_local_macro = { path = "../hydro_test_local_macro" }

[build-dependencies]
stageleft_tool = "0.8.1"

[dev-dependencies]
dfir_rs = { path = "../dfir_rs", version = "^0.13.0", default-features = false, features = [
    "meta",
] }
insta = "1.39"
