[package]
name = "lattices"
publish = true
version = "0.6.0"
documentation = "https://docs.rs/lattices/"
description = "Lattice data types for simplifying distributed state by providing associativity, commutativity, and idempotence."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cc-traits = "2.0.0"
sealed = "0.5.0"
serde = { version = "1.0.197", features = ["derive"], optional = true }
lattices_macro = { path = "../lattices_macro", version = "^0.5.9" }
ref-cast = "1.0.23"
variadics = { path = "../variadics", version = "^0.0.9" }
variadics_macro = { path = "../variadics_macro", version = "^0.6.0" }

[dev-dependencies]
trybuild = "1.0.0"
