[package]
name = "lattices_macro"
publish = true
version = "0.5.9"
documentation = "https://docs.rs/lattices/"
description = "Procedural macros for the `lattices` crate."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
proc-macro-crate = "1.0.0"
quote = "1.0.35"
syn = { version = "2.0.46", features = [ "full", "parsing", "visit-mut" ] }

[dev-dependencies]
insta = "1.39"
prettyplease = { version = "0.2.0", features = [ "verbatim" ] }
