[package]
name = "pusherator"
publish = true
version = "0.0.11"
documentation = "https://docs.rs/pusherator/"
description = "Push-based version of Rust iterators"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = [ "demux" ]
demux = [ "dep:variadics" ]

[dependencies]
either = "1.0.0"
variadics = { optional = true, path = "../variadics", version = "^0.0.9" }
