[package]
name = "stageleft_test_macro"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
test_feature = []

[lib]
proc-macro = true
path = "../stageleft_test/src/lib.rs"

[dependencies]
stageleft = { path = "../stageleft", version = "^0.7.0" }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.6.0" }
