[package]
name = "variadics"
publish = true
version = "0.0.9"
documentation = "https://docs.rs/variadics/"
description = "Variadic generics on stable Rust using tuple lists"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
sealed = "0.5.0"
hashbrown = "0.14.0"

[dev-dependencies]
trybuild = "1.0"
