[package]
name = "hydro_cli"
publish = true
version = "0.13.0"
documentation = "https://docs.rs/hydro_cli/"
description = "Hydro Deploy Command Line Interface"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
name = "hydro_cli"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.82", features = [ "backtrace" ] }
bytes = "1.1.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.0"
hydro_deploy = { path = "../core", version = "^0.13.0" }
hydro_deploy_integration = { path = "../hydro_deploy_integration", version = "^0.13.0" }
pyo3 = { version = "0.20.0", features = ["abi3-py37"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pythonize = "0.20.0"
tokio = { version = "1.29.0", features = [ "full" ] }
