[package]
name = "hydro_cli_examples"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dev-dependencies]
dfir_rs = { path = "../../dfir_rs", features = [ "deploy_integration" ] }

tokio = { version = "1.29.0", features = [ "full" ] }
serde = { version = "1.0.197", features = ["rc"] }
serde_json = "1.0.115"
rand = "0.8.0"

futures = "0.3.0"

tokio-tungstenite = "0.20.0"
