[package]
name = "dfir-template"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.20", features = ["serde"], default-features = true }
clap = { version = "4.5.4", features = ["derive"] }
dfir_rs = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
serde = { version = "1.0.197", features = ["derive"] }

[lints.clippy]
uninlined_format_args = "allow"
