[package]
name = "hydro-template"
publish = false
version = "0.0.0"
edition = "2024"

[features]
default = ["stageleft_devel"]
stageleft_devel = []

[dependencies]
hydro_lang = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
hydro_std = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
stageleft = "0.7.0"
tokio = { version = "1.29.0", features = [ "full" ] }

[build-dependencies]
stageleft_tool = "0.6.0"

[dev-dependencies]
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
ctor = "0.2"
hydro_deploy = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}" }
hydro_lang = { git = "{{ hydro_git | default: 'https://github.com/hydro-project/hydro.git' }}", branch = "{{ hydro_branch | default: 'main' }}", features = [
    "deploy",
] }
tokio-stream = { version = "0.1.3", default-features = false }
